--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body id="container">
     <h1 id="titulo_consulta">Game Of Thrones</h1>
 
-    // Placeholder pone texto guia para el usuario
+    <!-- Placeholder pone texto guia para el usuario-->
     <input type="text" name="input_personaje" id="input_personaje" placeholder="ID Del personaje">
 
     <button id="button_search" onclick="obtenerValorInput()">Buscar</button>
